deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pm25-deployment
spec:
  replicas: 4
  template:
    metadata:
      labels:
        app: pm25
    spec:
      containers:
      - name: pm25
        image: CONTAINER_IMAGE_TAG
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: pm25-svc
  labels:
    app: pm25
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: pm25
