ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pm25-ingress
spec:
  backend:
    serviceName: pm25-svc
    servicePort: 8080
